2003-09-30  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkCanvas.c (TkGetStringsFromObjs): 
	* generic/tkPanedWindow.c (PanedWindowWorldChanged): Private
	functions should be either static or prefixed with 'Tk' (thanks to
	George Staplin for spotting this.)

2003-09-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc:    Implementation of TIP #150, "Provide
	* win/tkWinSend.c:    'send' command for Windows"
	* win/tkWinSendCom.h:
	* win/tkWinSendCom.c:

2003-09-26  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>

	* macosx/tkMacOSXWm.c (TkWmStackorderToplevelWrapperMap): Add
	GetWindowFromPort() [Bug #812415]; make function static.

2003-09-25  Daniel Steffen  <das@users.sourceforge.net>

	* library/demos/widget: don't create iconwindow on aqua, but add
	about menu like on classic.
	* macosx/Makefile: pass MAKEOVERRIDES to pxbuild.
	* macosx/tkMacOSXButton.c: added -compound support for bevel buttons.

	* unix/configure:
	* unix/configure.in:
	* unix/tkConfig.sh.in: added TK_INCLUDE_SPEC to allow extensions to
	find installed Tk headers, parallel to TCL_INCLUDE_SPEC. [Bug 777203] 

2003-09-18  Chengye Mao <chengye.geo@yahoo.com>
	* generic/tkConsole.c: Fixed memroy leak [Bug 802435]

2003-09-18  Peter Spjuth  <peter.spjuth@space.se>
	* doc/grid.n:
	* tests/grid.test:
	* generic/tkGrid.c: Implementation of TIP#147,
	"Make Grid's Column/Row Configure Easier".

2003-09-17  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkImage.c:	Stopped [image create] from generating an
	* tests/image.test:	image command name that would overwrite an
	existing command name.  Thanks to Michael Schlenker.  [Bug 808039].

2003-09-16  Peter Spjuth  <peter.spjuth@space.se>
	* tests/grid.test:
	* generic/tkGrid.c: Reworked a part of grid's geometry computations
	to handle some tricky cases better. [Bug #792387]

2003-09-05  Joe English  <jenglish@users.sourceforge.net>
	* doc/bind.n: Describe %P and %s substitution for